@@ -2,7 +2,10 @@ package com.upc.finances.controller;
 
 import com.upc.finances.domain.model.User;
 import com.upc.finances.domain.service.UserService;
+import com.upc.finances.resource.SaveUserResource;
+import com.upc.finances.resource.UserResource;
 import com.upc.finances.resource.UserSignInResource;
+import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
@@ -11,28 +14,39 @@ import org.springframework.web.bind.annotation.*;
 
 import javax.validation.Valid;
 import java.util.List;
-
+import java.util.stream.Collectors;
+@CrossOrigin
 @RestController
 @RequestMapping("/api")
 public class UsersController {
     @Autowired
-    UserService userService;
+    private UserService userService;
+    @Autowired
+    private ModelMapper mapper;
 
     @GetMapping("/users")
-    public Page<User> getAllPlayers(Pageable pageable){
-        List<User> users = userService.getAllUsers(pageable).toList();
+    public Page<UserResource> getAllPlayers(Pageable pageable){
+        List<UserResource> users = userService.getAllUsers(pageable).stream().map(this::convertToResource).collect(Collectors.toList());
         return new PageImpl<>(users, pageable, users.size());
     }
     @GetMapping("/users/{id}")
-    public User getUserById(@PathVariable(name = "id") Long userId){
-        return userService.getUserById(userId);
+    public UserResource getUserById(@PathVariable(name = "id") Long userId){
+        return convertToResource(userService.getUserById(userId));
     }
     @PostMapping("/users/signup")
-    public User Signup(@Valid @RequestBody User user){
-        return userService.register(user);
+    public UserResource Signup(@Valid @RequestBody SaveUserResource resource){
+        return convertToResource(userService.register(convertToEntity(resource)));
     }
     @PostMapping("/users/signin")
-    public User SignIn(@Valid @RequestBody UserSignInResource resource){
-        return userService.signIn(resource);
+    public UserResource SignIn(@Valid @RequestBody UserSignInResource resource){
+        return convertToResource(userService.signIn(resource));
+    }
+
+    private User convertToEntity(SaveUserResource resource) {
+        return mapper.map(resource, User.class);
+    }
+
+    private UserResource convertToResource(User entity) {
+        return mapper.map(entity, UserResource.class);
     }
 }
